{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 136,
  "lineage": "e8315205-a50d-6902-454c-be3220788fa0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:internet-gateway/igw-0b0668867e69eecf4",
            "id": "igw-0b0668867e69eecf4",
            "owner_id": "722245653955",
            "tags": {
              "Name": "tf Internet Gateway"
            },
            "tags_all": {
              "Name": "tf Internet Gateway"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "WLZ_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "cagw-06ee7774c5fc5f901",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0be2899abc73719e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be2899abc73719e5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_carrier_gateway.tf_carrier_gateway",
            "aws_route_table.WLZ_route_table",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peeraccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "192.168.248.0/21",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c31b4d779bdd4bfc116581087",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c31b4d779bdd4bfc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-036f4a3f10d214285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc",
            "aws_vpc_peering_connection_accepter.peer",
            "mongodbatlas_network_container.atlas_container",
            "mongodbatlas_network_peering.aws-atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "region_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0668867e69eecf4",
            "id": "r-rtb-0f8cd70d6bb35812d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8cd70d6bb35812d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_internet_gw",
            "aws_route_table.region_route_table",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WLZ_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:route-table/rtb-0be2899abc73719e5",
            "id": "rtb-0be2899abc73719e5",
            "owner_id": "722245653955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Wavelength Zone Route Table"
            },
            "tags_all": {
              "Name": "Wavelength Zone Route Table"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "region_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:route-table/rtb-0f8cd70d6bb35812d",
            "id": "rtb-0f8cd70d6bb35812d",
            "owner_id": "722245653955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Region Route Table"
            },
            "tags_all": {
              "Name": "Region Route Table"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "region_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049905f3ee2a99de4",
            "route_table_id": "rtb-0f8cd70d6bb35812d",
            "subnet_id": "subnet-0469b9d2a73b801a2"
          },
          "dependencies": [
            "aws_route_table.region_route_table",
            "aws_subnet.region_subnets",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0631165cfd6608d08",
            "route_table_id": "rtb-0f8cd70d6bb35812d",
            "subnet_id": "subnet-0a43d8f92547a635f"
          },
          "dependencies": [
            "aws_route_table.region_route_table",
            "aws_subnet.region_subnets",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wavelength_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "atl",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce61fdd5f0e5d36a",
            "route_table_id": "rtb-0be2899abc73719e5",
            "subnet_id": "subnet-0812e69ab148c84b6"
          },
          "dependencies": [
            "aws_route_table.WLZ_route_table",
            "aws_subnet.wavelength_subnets",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "bos",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f6d1d0a4dc5ecd",
            "route_table_id": "rtb-0be2899abc73719e5",
            "subnet_id": "subnet-07d7f9715bfd2b898"
          },
          "dependencies": [
            "aws_route_table.WLZ_route_table",
            "aws_subnet.wavelength_subnets",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "mia",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d699901c94f7a83",
            "route_table_id": "rtb-0be2899abc73719e5",
            "subnet_id": "subnet-0e2e0e428d236e8de"
          },
          "dependencies": [
            "aws_route_table.WLZ_route_table",
            "aws_subnet.wavelength_subnets",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "nyc",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d1f02dc860be3e",
            "route_table_id": "rtb-0be2899abc73719e5",
            "subnet_id": "subnet-04f3a93695856fe35"
          },
          "dependencies": [
            "aws_route_table.WLZ_route_table",
            "aws_subnet.wavelength_subnets",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "was",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc881846e71ab2fa",
            "route_table_id": "rtb-0be2899abc73719e5",
            "subnet_id": "subnet-06df8d71d327d1a78"
          },
          "dependencies": [
            "aws_route_table.WLZ_route_table",
            "aws_subnet.wavelength_subnets",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:security-group/sg-0d7f68818001d6df8",
            "description": "Security group for Realm instance at the edge",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7f68818001d6df8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "realm-sg",
            "name_prefix": "",
            "owner_id": "722245653955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Realm Edge Security Group"
            },
            "tags_all": {
              "Name": "Realm Edge Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "region_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-0469b9d2a73b801a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0469b9d2a73b801a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "region-subnet-az1"
            },
            "tags_all": {
              "Name": "region-subnet-az1"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-0a43d8f92547a635f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a43d8f92547a635f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "region-subnet-az2"
            },
            "tags_all": {
              "Name": "region-subnet-az2"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wavelength_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "atl",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-0812e69ab148c84b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-wl1-atl-wlz-1",
            "availability_zone_id": "use1-wl1-atl-wlz1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0812e69ab148c84b6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-subnet-atl"
            },
            "tags_all": {
              "Name": "wavelength-subnet-atl"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "bos",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-07d7f9715bfd2b898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-wl1-bos-wlz-1",
            "availability_zone_id": "use1-wl1-bos-wlz1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07d7f9715bfd2b898",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-subnet-bos"
            },
            "tags_all": {
              "Name": "wavelength-subnet-bos"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "mia",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-0e2e0e428d236e8de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-wl1-mia-wlz-1",
            "availability_zone_id": "use1-wl1-mia-wlz1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0e2e0e428d236e8de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-subnet-mia"
            },
            "tags_all": {
              "Name": "wavelength-subnet-mia"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "nyc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-04f3a93695856fe35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-wl1-nyc-wlz-1",
            "availability_zone_id": "use1-wl1-nyc-wlz1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04f3a93695856fe35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-subnet-nyc"
            },
            "tags_all": {
              "Name": "wavelength-subnet-nyc"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": "was",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:subnet/subnet-06df8d71d327d1a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1-wl1-was-wlz-1",
            "availability_zone_id": "use1-wl1-was-wlz1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06df8d71d327d1a78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-subnet-was"
            },
            "tags_all": {
              "Name": "wavelength-subnet-was"
            },
            "vpc_id": "vpc-0691a66e995e43129"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:722245653955:vpc/vpc-0691a66e995e43129",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4027936837ce742",
            "default_route_table_id": "rtb-0c31b4d779bdd4bfc",
            "default_security_group_id": "sg-0cc5856875cfb43fb",
            "dhcp_options_id": "dopt-68e4ba0d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0691a66e995e43129",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c31b4d779bdd4bfc",
            "owner_id": "722245653955",
            "tags": {
              "Name": "wavelength-vpc"
            },
            "tags_all": {
              "Name": "wavelength-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-036f4a3f10d214285",
            "peer_owner_id": "894638218152",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-058283cda27368315",
            "vpc_id": "vpc-0691a66e995e43129",
            "vpc_peering_connection_id": "pcx-036f4a3f10d214285"
          },
          "dependencies": [
            "aws_vpc.tf-vpc",
            "mongodbatlas_network_container.atlas_container",
            "mongodbatlas_network_peering.aws-atlas"
          ]
        }
      ]
    }
  ]
}